--- a/arch/arm/boot/dts/r8a7745-iwg22m.dts
+++ b/arch/arm/boot/dts/r8a7745-iwg22m.dts
@@ -26,6 +26,15 @@
 		device_type = "memory";
 		reg = <0 0x40000000 0 0x20000000>;
 	};
+
+	reg_3p3v: 3p3v {
+		compatible = "regulator-fixed";
+		regulator-name = "3P3V";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		regulator-always-on;
+		regulator-boot-on;
+	};
 };
 
 &extal_clk {
@@ -37,11 +46,28 @@
 			renesas,groups = "scif4_data_b";
 			renesas,function = "scif4";
 	};
+
+	mmcif0_pins: mmcif0 {
+		renesas,groups = "mmc_data8", "mmc_ctrl";
+		renesas,function = "mmc";
+	};
 };
 
 &scif4 {
 	pinctrl-0 = <&scif4_pins>;
 	pinctrl-names = "default";
 
+	status = "okay";
+};
+
+&mmcif0 {
+	pinctrl-0 = <&mmcif0_pins>;
+	pinctrl-names = "default";
+
+	vmmc-supply = <&reg_3p3v>;
+	vqmmc-supply = <&reg_3p3v>;
+	bus-width = <8>;
+	non-removable;
+        mmc-rst-gpio = <&gpio3 26 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 };
