--- a/arch/arm/boot/dts/r8a7745-iwg22m.dts
+++ b/arch/arm/boot/dts/r8a7745-iwg22m.dts
@@ -26,6 +26,7 @@
 		serial4 = &scif5;
 		serial5 = &hscif1;
 		serial6 = &hscif2;
+		eth = &avb;
 	};
 
 	memory@40000000 {
@@ -194,6 +195,16 @@
 	can1_pins: can1 {
 		renesas,groups = "can1";
 		renesas,function = "can1";
+	};
+
+	avb_pins: avb {
+		renesas,groups = "avb_mdio", "avb_gmii", "avb_phy_int";
+		renesas,function = "avb";
+	};
+
+	phy0_pins: phy0 {
+		renesas,groups = "intc_irq8";
+		renesas,function = "intc";
 	};
 
 };
@@ -426,4 +437,18 @@
 
 &pci1 {
        status = "okay";
+};
+
+&avb {
+	pinctrl-0 = <&avb_pins>;
+	pinctrl-names = "default";
+
+	phy-handle = <&phy0>;
+	renesas,no-ether-link;
+	status = "okay";
+
+	phy0: ethernet-phy@0 {
+		reg = <3>;
+		micrel,led-mode = <1>;
+	};
 };
