--- a/arch/arm/boot/dts/r8a7745.dtsi
+++ b/arch/arm/boot/dts/r8a7745.dtsi
@@ -237,6 +237,21 @@
 		status = "disabled";
 	};
 
+	tmu1: timer@fff60000 {
+		compatible = "renesas,tmu-r8a7745", "renesas,tmu";
+		reg = <0 0xfff60000 0 0x30>;
+		interrupts = <0 128 IRQ_TYPE_LEVEL_HIGH>,
+			     <0 129 IRQ_TYPE_LEVEL_HIGH>,
+			     <0 130 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&mstp1_clks R8A7745_CLK_TMU1>;
+		clock-names = "fck";
+		power-domains = <&sysc R8A7745_PD_ALWAYS_ON>;
+
+		#renesas,channels = <3>;
+
+		status = "disabled";
+	};
+
 	timer {
 		compatible = "arm,armv7-timer";
 		interrupts = <1 13 (GIC_CPU_MASK_SIMPLE(2) | IRQ_TYPE_LEVEL_LOW)>,
