--- a/arch/arm/boot/dts/r8a7745-iwg22m.dts
+++ b/arch/arm/boot/dts/r8a7745-iwg22m.dts
@@ -75,14 +75,17 @@
 		regulator-always-on;
 	};
 
-	vcc_sdhi0: regulator@0 {
-		compatible = "regulator-fixed";
+	vccq_sdhi0: regulator@0 {
+		compatible = "regulator-gpio";
 
-		regulator-name = "SDHI0 Vcc";
-		regulator-min-microvolt = <3300000>;
+		regulator-name = "SDHI0 Vccq";
+		regulator-min-microvolt = <1800000>;
 		regulator-max-microvolt = <3300000>;
 
 		gpio = <&gpio0 20 GPIO_ACTIVE_HIGH>;
+		gpios-states = <1>;
+		states = <3300000 1
+				1800000 0>;
 		enable-active-high;
 	};
 
@@ -274,13 +277,21 @@
 	};
 
 	sdhi0_pins: sd0 {
-		renesas,groups = "sdhi0_data4", "sdhi0_ctrl";
+		renesas,groups = "sdhi0_data4", "sdhi0_ctrl", "sdhi0_cd";
 		renesas,function = "sdhi0";
+		power-source = <3300>;
+	};
+
+	sdhi0_pins_uhs: sd0_uhs {
+		renesas,groups = "sdhi0_data4", "sdhi0_ctrl", "sdhi0_cd";
+		renesas,function = "sdhi0";
+		power-source = <1800>;
 	};
 
 	sdhi1_pins: sd1 {
 		renesas,groups = "sdhi1_data4", "sdhi1_ctrl";
 		renesas,function = "sdhi1";
+		power-source = <3300>;
 	};
 
 	qspi_pins: spi0 {
@@ -485,11 +496,11 @@
 
 &sdhi0 {
 	pinctrl-0 = <&sdhi0_pins>;
-	pinctrl-names = "default";
+	pinctrl-1 = <&sdhi0_pins_uhs>;
+	pinctrl-names = "default", "uhs";
 
-	vmmc-supply = <&vcc_sdhi0>;
-	vqmmc-supply = <&reg_3p3v>;
-	cd-gpios = <&gpio6 6 GPIO_ACTIVE_LOW>;
+	vmmc-supply = <&reg_3p3v>;
+	vqmmc-supply = <&vccq_sdhi0>;
 	status = "okay";
 };
 
